force-app/main/default/objects/FieloEE__MemberSegment__c/FieloEE__MemberSegment__c.object-meta.xml
<CustomObject>
    <description>Segments applied to different members. Segments are applied manually.</description>
    <label>Member Segment</label>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Member Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Segment</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>