force-app/main/default/objects/FieloEE__MemberSegment__c/fields/FieloEE__Member2__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Member2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Member</label>
    <referenceTo>FieloEE__Member__c</referenceTo>
    <relationshipLabel>Member Segment (Member)</relationshipLabel>
    <relationshipName>MemberSegments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>