force-app/main/default/objects/FieloEE__MemberSegment__c/fields/FieloEE__MemberSegmentCombination__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__MemberSegmentCombination__c</fullName>
    <description>This field is for internal use. It will contain the ID of the Member and the Id of the Segment concatenated. This field is unique, so you can not relate the same Member manually twice with a Segment.</description>
    <label>Member segment combination</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>