force-app/main/default/objects/FieloEE__MemberSegment__c/fields/FieloEE__Segment2__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Segment2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Segment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FieloEE__RedemptionRule__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Manual</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FieloEE__RedemptionRule__c</referenceTo>
    <relationshipLabel>Member Segment (Segment)</relationshipLabel>
    <relationshipName>MemberSegments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>